Fixed contact section wrapping

--- a/style.css
+++ b/style.css
@@ -360,7 +360,7 @@ li {
 }
 
 /* CONTACT SECTION LANDSCAPE LAYOUT */
-@media only screen and (min-width: 550px) {
+@media only screen and (min-width: 750px) {
 	.contactBox {
 		width: 100%;
 		display: flex;
@@ -410,7 +410,7 @@ li {
 	}
 }
 /* CONTACT SECTION PORTRAIT LAYOUT */
-@media only screen and (max-width: 550px) {
+@media only screen and (max-width: 750px) {
 	.contactBox {
 		width: 100%;
 		display: flex;
@@ -474,6 +474,24 @@ li {
 	box-shadow: inset 0 -3px 0 0 #fff;
 }
 
+/* INSPIRATION BOX LANDSCAPE LAYOUT */
+@media only screen and (min-width: 120px){
+	.inspirationBox {
+		padding-top: 5px;
+		text-align:center; 
+		color:white; 
+		flex-basis:100%;
+	}
+}
+/* INSPIRATION BOX PORTRAIT LAYOUT */
+@media only screen and (max-width: 120px){
+	.inspirationBox {
+		padding-top: 4vh;
+		text-align:center; 
+		color:white; 
+		flex-basis:100%; 
+	}
+}
 .inspirationLink {
 	-webkit-transition: all .2s ease-in-out;
     transition: all .2s ease-in-out;
